# openapi.yaml
@@ -3,8 +3,7 @@
 
 openapi: 3.0.3
 info:
-    title: User API
-    description: User management service definition
+    title: ""
     version: 0.0.1
 paths:
     /api/v1/login:
@@ -17,7 +16,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/LoginRequest'
+                            $ref: '#/components/schemas/user.v1.LoginRequest'
                 required: true
             responses:
                 "200":
@@ -25,13 +24,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/LoginResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/user.v1.LoginResponse'
     /api/v1/users:
         post:
             tags:
@@ -42,7 +35,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/CreateUserRequest'
+                            $ref: '#/components/schemas/user.v1.CreateUserRequest'
                 required: true
             responses:
                 "200":
@@ -50,13 +43,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/CreateUserResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/user.v1.CreateUserResponse'
     /api/v1/users/{id}:
         get:
             tags:
@@ -76,13 +63,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/GetUserResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/user.v1.GetUserResponse'
         put:
             tags:
                 - User
@@ -99,7 +80,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/UpdateUserRequest'
+                            $ref: '#/components/schemas/user.v1.UpdateUserRequest'
                 required: true
             responses:
                 "200":
@@ -107,13 +88,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/UpdateUserResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/user.v1.UpdateUserResponse'
         delete:
             tags:
                 - User
@@ -132,13 +107,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/DeleteUserResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/user.v1.DeleteUserResponse'
     /api/v1/users/{id}/disable:
         patch:
             tags:
@@ -158,13 +127,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/DisableUserResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/user.v1.DisableUserResponse'
     /api/v1/users/{id}/enable:
         patch:
             tags:
@@ -184,16 +147,84 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/EnableUserResponse'
-                default:
-                    description: Default error response
+                                $ref: '#/components/schemas/user.v1.EnableUserResponse'
+    /helloshort/{name}:
+        get:
+            tags:
+                - Shorturl
+            operationId: Shorturl_Hello
+            parameters:
+                - name: name
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/api.shorturl.v1.HelloResp'
+    /helloworld/{name}:
+        get:
+            tags:
+                - Greeter
+            description: Sends a greeting
+            operationId: Greeter_SayHello
+            parameters:
+                - name: name
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
+    /v1/shorturl:
+        post:
+            tags:
+                - Shorturl
+            operationId: Shorturl_CreateShorturl
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.shorturl.v1.CreateShorturlRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.shorturl.v1.CreateShorturlReply'
 components:
     schemas:
-        CreateUserRequest:
+        api.shorturl.v1.CreateShorturlReply:
+            type: object
+            properties: {}
+        api.shorturl.v1.CreateShorturlRequest:
+            type: object
+            properties:
+                url:
+                    type: string
+        api.shorturl.v1.HelloResp:
+            type: object
+            properties:
+                message:
+                    type: string
+        helloworld.v1.HelloReply:
+            type: object
+            properties:
+                message:
+                    type: string
+            description: The response message containing the greetings
+        user.v1.CreateUserRequest:
             type: object
             properties:
                 email:
@@ -208,7 +239,7 @@ components:
                     type: string
                 bio:
                     type: string
-        CreateUserResponse:
+        user.v1.CreateUserResponse:
             type: object
             properties:
                 id:
@@ -217,25 +248,25 @@ components:
                 status:
                     type: integer
                     format: int32
-        DeleteUserResponse:
+        user.v1.DeleteUserResponse:
             type: object
             properties:
                 status:
                     type: integer
                     format: int32
-        DisableUserResponse:
+        user.v1.DisableUserResponse:
             type: object
             properties:
                 status:
                     type: integer
                     format: int32
-        EnableUserResponse:
+        user.v1.EnableUserResponse:
             type: object
             properties:
                 status:
                     type: integer
                     format: int32
-        GetUserResponse:
+        user.v1.GetUserResponse:
             type: object
             properties:
                 id:
@@ -254,45 +285,21 @@ components:
                 status:
                     type: integer
                     format: int32
-        GoogleProtobufAny:
-            type: object
-            properties:
-                '@type':
-                    type: string
-                    description: The type of the serialized message.
-            additionalProperties: true
-            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        LoginRequest:
+        user.v1.LoginRequest:
             type: object
             properties:
                 email:
                     type: string
                 password:
                     type: string
-        LoginResponse:
+        user.v1.LoginResponse:
             type: object
             properties:
                 token:
                     type: string
                 User:
-                    $ref: '#/components/schemas/GetUserResponse'
-        Status:
-            type: object
-            properties:
-                code:
-                    type: integer
-                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
-                    format: int32
-                message:
-                    type: string
-                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
-                details:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/GoogleProtobufAny'
-                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
-            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        UpdateUserRequest:
+                    $ref: '#/components/schemas/user.v1.GetUserResponse'
+        user.v1.UpdateUserRequest:
             type: object
             properties:
                 id:
@@ -311,11 +318,15 @@ components:
                 status:
                     type: integer
                     format: int32
-        UpdateUserResponse:
+        user.v1.UpdateUserResponse:
             type: object
             properties:
                 status:
                     type: integer
                     format: int32
 tags:
+    - name: Greeter
+      description: The greeting service definition.
+    - name: Shorturl
     - name: User
+      description: User management service definition
